# heat_equation

./: CMakeLists.txt  main.cpp  math.hpp
